force-app/main/default/objects/Git_Dev__c/Git_Dev__c.object-meta.xml
<CustomObject>
    <label>Git Dev</label>
    <nameField>
        <label>Git Dev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Devs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>