force-app/main/default/objects/Git_Dev__c/fields/Amar__c.field-meta.xml
<CustomField>
    <fullName>Amar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amar</label>
    <type>Checkbox</type>
</CustomField>