force-app/main/default/objects/Git_Dev__c/fields/Deploy_to_QA__c.field-meta.xml
<CustomField>
    <fullName>Deploy_to_QA__c</fullName>
    <label>Deploy to QA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>