force-app/main/default/objects/Git_Dev__c/fields/Git_Branch__c.field-meta.xml
<CustomField>
    <fullName>Git_Branch__c</fullName>
    <label>Git Branch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>