force-app/main/default/objects/Git_Dev__c/fields/HyphenXDEV__c.field-meta.xml
<CustomField>
    <fullName>HyphenXDEV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HyphenXDEV</label>
    <type>Checkbox</type>
</CustomField>